perf(bin-classifier): get batches for plotting without touching the dataloaders
The previous method iterates through the entire dataloader, but what we actually need is just the
first and last few images.

--- a/binary_classification.ipynb
+++ b/binary_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "pending-hindu",
+   "id": "minute-memorabilia",
    "metadata": {},
    "source": [
     "## CSCI 6380 Mini Project\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "yellow-beijing",
+   "id": "rotary-desert",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-03T21:47:11.005922Z",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "animated-swiss",
+   "id": "lesser-elite",
    "metadata": {},
    "source": [
     "### Exploratory Data Analysis\n",
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "separated-opinion",
+   "id": "surprising-ecology",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-03T21:37:32.906266Z",
@@ -164,10 +164,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sealed-masters",
+   "id": "loved-detroit",
    "metadata": {},
    "source": [
-    "The test set is roughly 10% of the entire dataset. Two obvious problems can be found from this table:\n",
+    "dm_test.pneumonia_test[:4]The test set is roughly 10% of the entire dataset. Two obvious problems can be found from this table:\n",
     "\n",
     "1. The validation set is too small, and\n",
     "2. There's almost three times as many pneumonia samples as normal ones.\n",
@@ -183,15 +183,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "accompanied-provision",
+   "execution_count": 25,
+   "id": "unnecessary-dinner",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-03-03T21:37:32.967379Z",
-     "iopub.status.busy": "2021-03-03T21:37:32.967157Z",
-     "iopub.status.idle": "2021-03-03T21:37:51.686171Z",
-     "shell.execute_reply": "2021-03-03T21:37:51.685394Z",
-     "shell.execute_reply.started": "2021-03-03T21:37:32.967351Z"
+     "iopub.execute_input": "2021-03-03T22:05:52.051794Z",
+     "iopub.status.busy": "2021-03-03T22:05:52.051521Z",
+     "iopub.status.idle": "2021-03-03T22:05:53.907511Z",
+     "shell.execute_reply": "2021-03-03T22:05:53.906873Z",
+     "shell.execute_reply.started": "2021-03-03T22:05:52.051755Z"
     }
    },
    "outputs": [
@@ -212,13 +212,16 @@
     "dm_test = PneumoniaDataModule(data_dir, batch_size=4)\n",
     "dm_test.setup(\"test\")\n",
     "\n",
-    "dm_test_gen = iter(dm_test.test_dataloader())\n",
-    "normal_imgs, normal_labels = next(dm_test_gen)\n",
-    "for pneumonia_imgs, pneumonia_labels in dm_test_gen:\n",
-    "    pass\n",
+    "normal_batch = [dm_test.pneumonia_test[i] for i in range(4)]\n",
+    "normal_labels = [normal_batch[i][1] for i in range(4)]\n",
+    "normal_imgs = [normal_batch[i][0] for i in range(4)]\n",
     "\n",
-    "imgs = torch.cat((normal_imgs, pneumonia_imgs))\n",
-    "img_labels = normal_labels.tolist() + pneumonia_labels.tolist()\n",
+    "pneumonia_batch = [dm_test.pneumonia_test[i] for i in range(-4, 0)]\n",
+    "pneumonia_labels = [pneumonia_batch[i][1] for i in range(4)]\n",
+    "pneumonia_imgs = [pneumonia_batch[i][0] for i in range(4)]\n",
+    "\n",
+    "imgs = normal_imgs + pneumonia_imgs\n",
+    "img_labels = normal_labels + pneumonia_labels\n",
     "label_idx = {val: key for key, val in dm_test.class_to_idx.items()}\n",
     "\n",
     "fig, axs = plt.subplots(nrows=2, ncols=4, figsize=(24, 12))\n",
@@ -229,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adverse-consortium",
+   "id": "square-ultimate",
    "metadata": {},
    "source": [
     "[Here's a pretty good explanation](https://radiologyassistant.nl/chest/chest-x-ray/lung-disease) of what we should be looking for in the chest X-rays. From what I can tell, the images of patients with pneumonia are more cloudy, and the edges of the lung aren't as clear as the ones in the normal images.\n",
@@ -252,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "super-minority",
+   "id": "otherwise-determination",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-03T21:37:51.687715Z",
@@ -299,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "stone-ribbon",
+   "id": "specific-upset",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-03T21:37:52.112759Z",
@@ -606,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "explicit-reynolds",
+   "id": "impressed-swift",
    "metadata": {},
    "source": [
     "The baseline model performs really well on the training and validation sets -- accuracy, precision, recall, and F1 score are all >0.95. However, the test metrics are much worse (~0.79 for all metrics except recall). We could closer examine the predictions on the test set using a confusion matrix."
@@ -615,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "premium-recipient",
+   "id": "confused-sharing",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-03T21:48:54.620390Z",
@@ -699,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proof-trash",
+   "id": "initial-member",
    "metadata": {},
    "source": [
     "|           | Predicted normal | Predicted Pneumonia |\n",
