feat(bin-classifier): data-independent predictions as a baseline for metrics

--- a/binary_classification.ipynb
+++ b/binary_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "minute-memorabilia",
+   "id": "statewide-tract",
    "metadata": {},
    "source": [
     "## CSCI 6380 Mini Project\n",
@@ -17,30 +17,36 @@
     "\n",
     "- Data: https://data.mendeley.com/datasets/rscbjbr9sj/2\n",
     "- License: CC BY 4.0\n",
-    "- Citation: http://www.cell.com/cell/fulltext/S0092-8674(18)30154-5\n",
-    "\n",
+    "- Citation: http://www.cell.com/cell/fulltext/S0092-8674(18)30154-5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "awful-boards",
+   "metadata": {},
+   "source": [
     "### TODO\n",
     "\n",
     "- [X] Data input and simple EDA.\n",
     "- [X] Have a baseline model.\n",
     "- [ ] Generate a random split using just the training set, and see the performance on the \"test set\". If it's much better, then maybe there's mislabeling in the given test set.\n",
     "- [ ] Use a weighted cross entropy loss function to account for the class imbalance.\n",
-    "- [ ] Augment/Resample the training set to balance the normal and pneumonia samples.\n",
+    "- [ ] [Augment](https://stackoverflow.com/questions/51677788/data-augmentation-in-pytorch)/Resample the training set to balance the normal and pneumonia samples.\n",
     "- [ ] Tune the hyperparameters.\n",
     "- [ ] Log images with wrong predictions into TensorBoard and visualize them. Possibly [useful link](https://www.tensorflow.org/tensorboard/image_summaries) from TensorBoard."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "rotary-desert",
+   "execution_count": 23,
+   "id": "exclusive-wrapping",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-03-03T21:47:11.005922Z",
-     "iopub.status.busy": "2021-03-03T21:47:11.005636Z",
-     "iopub.status.idle": "2021-03-03T21:47:11.285865Z",
-     "shell.execute_reply": "2021-03-03T21:47:11.285141Z",
-     "shell.execute_reply.started": "2021-03-03T21:47:11.005890Z"
+     "iopub.execute_input": "2021-03-11T20:23:16.289271Z",
+     "iopub.status.busy": "2021-03-11T20:23:16.288993Z",
+     "iopub.status.idle": "2021-03-11T20:23:16.295288Z",
+     "shell.execute_reply": "2021-03-11T20:23:16.294485Z",
+     "shell.execute_reply.started": "2021-03-11T20:23:16.289239Z"
     }
    },
    "outputs": [],
@@ -48,19 +54,26 @@
     "from pathlib import Path\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import pytorch_lightning as pl\n",
     "import torch\n",
     "from core.data import PneumoniaDataModule\n",
     "from core.model import PneumoniaDetector\n",
     "from pytorch_lightning.loggers import TensorBoardLogger\n",
-    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import (\n",
+    "    accuracy_score,\n",
+    "    confusion_matrix,\n",
+    "    f1_score,\n",
+    "    precision_score,\n",
+    "    recall_score,\n",
+    ")\n",
     "from torch.nn import functional as F"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "lesser-elite",
+   "id": "brief-housing",
    "metadata": {},
    "source": [
     "### Exploratory Data Analysis\n",
@@ -70,15 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "surprising-ecology",
+   "execution_count": 3,
+   "id": "mexican-moral",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-03-03T21:37:32.906266Z",
-     "iopub.status.busy": "2021-03-03T21:37:32.906029Z",
-     "iopub.status.idle": "2021-03-03T21:37:32.966204Z",
-     "shell.execute_reply": "2021-03-03T21:37:32.965610Z",
-     "shell.execute_reply.started": "2021-03-03T21:37:32.906234Z"
+     "iopub.execute_input": "2021-03-11T20:10:58.979324Z",
+     "iopub.status.busy": "2021-03-11T20:10:58.979010Z",
+     "iopub.status.idle": "2021-03-11T20:10:59.245285Z",
+     "shell.execute_reply": "2021-03-11T20:10:59.243694Z",
+     "shell.execute_reply.started": "2021-03-11T20:10:58.979270Z"
     }
    },
    "outputs": [
@@ -138,7 +151,7 @@
        "test      234        390     0.375000"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "loved-detroit",
+   "id": "conventional-number",
    "metadata": {},
    "source": [
     "dm_test.pneumonia_test[:4]The test set is roughly 10% of the entire dataset. Two obvious problems can be found from this table:\n",
@@ -183,15 +196,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "unnecessary-dinner",
+   "execution_count": 4,
+   "id": "consolidated-philippines",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-03-03T22:05:52.051794Z",
-     "iopub.status.busy": "2021-03-03T22:05:52.051521Z",
-     "iopub.status.idle": "2021-03-03T22:05:53.907511Z",
-     "shell.execute_reply": "2021-03-03T22:05:53.906873Z",
-     "shell.execute_reply.started": "2021-03-03T22:05:52.051755Z"
+     "iopub.execute_input": "2021-03-11T20:11:02.769929Z",
+     "iopub.status.busy": "2021-03-11T20:11:02.769664Z",
+     "iopub.status.idle": "2021-03-11T20:11:04.896219Z",
+     "shell.execute_reply": "2021-03-11T20:11:04.895323Z",
+     "shell.execute_reply.started": "2021-03-11T20:11:02.769897Z"
     }
    },
    "outputs": [
@@ -232,11 +245,128 @@
   },
   {
    "cell_type": "markdown",
-   "id": "square-ultimate",
+   "id": "corrected-warrior",
    "metadata": {},
    "source": [
-    "[Here's a pretty good explanation](https://radiologyassistant.nl/chest/chest-x-ray/lung-disease) of what we should be looking for in the chest X-rays. From what I can tell, the images of patients with pneumonia are more cloudy, and the edges of the lung aren't as clear as the ones in the normal images.\n",
+    "[Here's a pretty good explanation](https://radiologyassistant.nl/chest/chest-x-ray/lung-disease) of what we should be looking for in the chest X-rays. From what I can tell, the images of patients with pneumonia are more cloudy, and the edges of the lung aren't as clear as the ones in the normal images."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "described-livestock",
+   "metadata": {},
+   "source": [
+    "### Data-Independent Model\n",
     "\n",
+    "We may calculate the metrics of a \"model\" that always predicts the most common class (which is pneumonia in this case) or a model that gives random guesses. These metrics can be used as a baseline for all future models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "outside-wilderness",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-03-11T20:35:43.130483Z",
+     "iopub.status.busy": "2021-03-11T20:35:43.130230Z",
+     "iopub.status.idle": "2021-03-11T20:35:43.230630Z",
+     "shell.execute_reply": "2021-03-11T20:35:43.229986Z",
+     "shell.execute_reply.started": "2021-03-11T20:35:43.130446Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>Precision</th>\n",
+       "      <th>Recall</th>\n",
+       "      <th>F1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>common_class</th>\n",
+       "      <td>0.742906</td>\n",
+       "      <td>0.742906</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.852491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>random_guess</th>\n",
+       "      <td>0.500383</td>\n",
+       "      <td>0.745835</td>\n",
+       "      <td>0.496774</td>\n",
+       "      <td>0.596344</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Accuracy  Precision    Recall        F1\n",
+       "common_class  0.742906   0.742906  1.000000  0.852491\n",
+       "random_guess  0.500383   0.745835  0.496774  0.596344"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pneumonia_sample_size = label_counts.loc[\"train\", \"PNEUMONIA\"]\n",
+    "normal_sample_size = label_counts.loc[\"train\", \"NORMAL\"]\n",
+    "fake_train = [1] * pneumonia_sample_size + [0] * normal_sample_size\n",
+    "common_pred = [1] * (pneumonia_sample_size + normal_sample_size)\n",
+    "random_pred = np.random.default_rng(42).choice(\n",
+    "    2, (pneumonia_sample_size + normal_sample_size)\n",
+    ")\n",
+    "\n",
+    "baseline_metrics = pd.DataFrame(\n",
+    "    [\n",
+    "        (\n",
+    "            accuracy_score(fake_train, common_pred),\n",
+    "            precision_score(fake_train, common_pred),\n",
+    "            recall_score(fake_train, common_pred),\n",
+    "            f1_score(fake_train, common_pred),\n",
+    "        ),\n",
+    "        (\n",
+    "            accuracy_score(fake_train, random_pred),\n",
+    "            precision_score(fake_train, random_pred),\n",
+    "            recall_score(fake_train, random_pred),\n",
+    "            f1_score(fake_train, random_pred),\n",
+    "        ),\n",
+    "    ],\n",
+    "    columns=[\"Accuracy\", \"Precision\", \"Recall\", \"F1\"],\n",
+    "    index=[\"common_class\", \"random_guess\"]\n",
+    ")\n",
+    "baseline_metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "starting-gilbert",
+   "metadata": {},
+   "source": [
     "### Baseline Model\n",
     "\n",
     "The PyTorch library has some pretrained models availabe in the [torchvision](https://pytorch.org/vision/0.8/models.html) package. Here's an article [comparing some of those architectures](https://towardsdatascience.com/the-w3h-of-alexnet-vggnet-resnet-and-inception-7baaaecccc96), and we'll be using [ResNet18](https://arxiv.org/abs/1512.03385) as the backbone of our feature extractor.\n",
@@ -255,14 +385,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "otherwise-determination",
+   "id": "critical-burden",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-03-03T21:37:51.687715Z",
-     "iopub.status.busy": "2021-03-03T21:37:51.687479Z",
-     "iopub.status.idle": "2021-03-03T21:37:52.111124Z",
-     "shell.execute_reply": "2021-03-03T21:37:52.110245Z",
-     "shell.execute_reply.started": "2021-03-03T21:37:51.687683Z"
+     "iopub.execute_input": "2021-03-09T02:52:06.882894Z",
+     "iopub.status.busy": "2021-03-09T02:52:06.882639Z",
+     "iopub.status.idle": "2021-03-09T02:52:07.512687Z",
+     "shell.execute_reply": "2021-03-09T02:52:07.511912Z",
+     "shell.execute_reply.started": "2021-03-09T02:52:06.882852Z"
     }
    },
    "outputs": [
@@ -302,14 +432,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "specific-upset",
+   "id": "exterior-kennedy",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-03-03T21:37:52.112759Z",
-     "iopub.status.busy": "2021-03-03T21:37:52.112510Z",
-     "iopub.status.idle": "2021-03-03T21:41:33.998804Z",
-     "shell.execute_reply": "2021-03-03T21:41:33.998036Z",
-     "shell.execute_reply.started": "2021-03-03T21:37:52.112726Z"
+     "iopub.execute_input": "2021-03-09T02:52:07.514032Z",
+     "iopub.status.busy": "2021-03-09T02:52:07.513787Z",
+     "iopub.status.idle": "2021-03-09T02:55:41.754998Z",
+     "shell.execute_reply": "2021-03-09T02:55:41.754215Z",
+     "shell.execute_reply.started": "2021-03-09T02:52:07.514002Z"
     }
    },
    "outputs": [
@@ -349,7 +479,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e977de9795c4c1abc351a6facf91359",
+       "model_id": "985fdb490d6c4c3cb55d12c9b59b54cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -573,7 +703,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e49eda6d61e94d098209a39e3e7d7eeb",
+       "model_id": "d44710bff1154023ab5cad8795072dbc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -609,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impressed-swift",
+   "id": "global-laser",
    "metadata": {},
    "source": [
     "The baseline model performs really well on the training and validation sets -- accuracy, precision, recall, and F1 score are all >0.95. However, the test metrics are much worse (~0.79 for all metrics except recall). We could closer examine the predictions on the test set using a confusion matrix."
@@ -617,15 +747,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "confused-sharing",
+   "execution_count": 6,
+   "id": "informed-handle",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-03-03T21:48:54.620390Z",
-     "iopub.status.busy": "2021-03-03T21:48:54.620068Z",
-     "iopub.status.idle": "2021-03-03T21:48:59.293714Z",
-     "shell.execute_reply": "2021-03-03T21:48:59.293024Z",
-     "shell.execute_reply.started": "2021-03-03T21:48:54.620353Z"
+     "iopub.execute_input": "2021-03-09T02:55:41.756719Z",
+     "iopub.status.busy": "2021-03-09T02:55:41.756475Z",
+     "iopub.status.idle": "2021-03-09T02:55:45.883294Z",
+     "shell.execute_reply": "2021-03-09T02:55:45.882594Z",
+     "shell.execute_reply.started": "2021-03-09T02:55:41.756682Z"
     }
    },
    "outputs": [
@@ -675,7 +805,7 @@
        "PNEUMONIA       3        387"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +832,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "initial-member",
+   "id": "owned-raise",
    "metadata": {},
    "source": [
     "|           | Predicted normal | Predicted Pneumonia |\n",
