fix: use local variable instead of labels in the global scope

--- a/binary_classification.ipynb
+++ b/binary_classification.ipynb
@@ -856,6 +856,7 @@
     "    y_pred = torch.cat(y_pred).cpu()\n",
     "    y_true = torch.cat(y_true).cpu()\n",
     "\n",
+    "    labels = sorted(datamod.class_to_idx.keys())\n",
     "    mat = confusion_matrix(y_true, y_pred, labels=sorted(datamod.class_to_idx.values()))\n",
     "    res = pd.DataFrame(mat, columns=labels, index=labels)\n",
     "    res.index = [f\"True {x}\" for x in res.index]\n",
@@ -2273,7 +2274,7 @@
  "metadata": {
   "jupytext": {
    "encoding": "# -*- coding: utf-8 -*-",
-   "formats": "ipynb,auto:percent"
+   "formats": "ipynb,py:percent"
   },
   "kernelspec": {
    "display_name": "Python 3",
